--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "cmdk": "^1.1.1",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
+    "drizzle-zod": "^0.8.3",
     "eslint-config-prettier": "^10.1.8",
     "lucide-react": "^0.540.0",
     "next": "15.4.5",
+    "next-safe-action": "^8.0.11",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "react": "19.1.0",
